[package]
authors = ["Waleed Khan <me@waleedkhan.name>"]
description = "UI component to interactively select changes to include in a commit."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "scm-record"
repository = "https://github.com/arxanas/git-branchless"
version = "0.2.0"

# Main consumers to consider:
# - git-branchless: https://github.com/arxanas/git-branchless/blob/master/Cargo.toml
# - jj: https://github.com/martinvonz/jj/blob/main/Cargo.toml
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["serde"]
default = ["debug"]
scm-diff-editor = ["clap", "diffy", "sha1", "walkdir"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
cassowary = "0.3"
crossterm = "0.27"
num-traits = "0.2"
thiserror = "1.0"
tracing = "0.1"
ratatui = "0.23.0"
unicode-width = "0.1"

# Features: serde
serde = { version = "1.0", features = ["serde_derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Features: scm-diff-editor
clap = { version = "4.5", features = ["derive"], optional = true }
diffy = { version = "0.3", optional = true }
sha1 = { version = "0.10", optional = true }
walkdir = { version = "2.5", optional = true }

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.5"
eyre = "0.6"
insta = "1.38"
maplit = "1.0"
serde_json = "1.0"

[[bin]]
name = "scm-diff-editor"
required-features = ["scm-diff-editor"]

[[bench]]
name = "benches"
harness = false
