[package]
authors = ["Waleed Khan <me@waleedkhan.name>"]
description = "UI component to interactively select changes to include in a commit."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "scm-record"
repository = "https://github.com/arxanas/scm-record"
version = "0.8.0"

# Main consumers to consider:
# - git-branchless: https://github.com/arxanas/git-branchless/blob/master/Cargo.toml
# - jj: https://github.com/martinvonz/jj/blob/main/Cargo.toml
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["serde"]
default = ["debug"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
cassowary = "0.3"
crossterm = "0.28"
num-traits = "0.2"
thiserror = "2.0"
tracing = "0.1"
ratatui = "0.29.0"
unicode-width = "0.2"

# Features: serde
serde = { version = "1.0", features = ["serde_derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.5"
insta = "1.43"
proptest = "1.7.0"
serde_json = "1.0"

[[bench]]
name = "benches"
harness = false

[package.metadata.release]
pre-release-replacements = [
  { file = "../CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
  { file = "../CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
  { file = "../CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
]
